修正 yml 文件语法错误

--- a/.github/workflows/github_host.yml
+++ b/.github/workflows/github_host.yml
@@ -30,6 +30,7 @@ jobs:
           fetch-depth: 0
 
       - uses: TomGarden/TomGitActions@v0.1.2
+        env:
           # 这里的环境变量可以在脚本中使用
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # 必选配置项
