--- a/.github/workflows/github_host.yml
+++ b/.github/workflows/github_host.yml
@@ -30,6 +30,7 @@ jobs:
           fetch-depth: 0
 
       - uses: TomGarden/TomGitActions@v0.1.2
+        run: python3 ./.github/github_actions/git_action_practice.py
         env:
           # 这里的环境变量可以在脚本中使用
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
