--- a/.github/workflows/github_host.yml
+++ b/.github/workflows/github_host.yml
@@ -1,5 +1,5 @@
 # 工作流程的名称。 GitHub 在仓库的操作页面上显示工作流程的名称。
-name: github_host-action-issue-blog
+name: action-issue-blog
 
 
 # 下文含义为 *******************************************
@@ -26,10 +26,19 @@ jobs:
         # 定义环境变量
         with:
           ref: master
-          # 用于拉取更多历史内容
+          # 用于拉取更多历史内容 : https://github.com/actions/checkout/releases
           fetch-depth: 0
 
-      - uses: TomGarden/TomGitActions@master
+      - name: print machine info
+        run: |
+          pwd
+          ls -a -l
+
+      - name: Install dependencies # 步骤显示在 GitHub 上的名称。
+        run: bash ./.github/github_actions/install_dependence_macos.sh
+
+      - name: Publish Issues
+        run: python3 ./.github/github_actions/git_action_practice.py
         env:
           # 这里的环境变量可以在脚本中使用
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,5 +46,6 @@ jobs:
           ISSUES_MAP_FILE_NUMBER:  '9'
           # 可选配置项
           GITHUB_BRANCH:  'master'
+          ISSUES_CONFIG: '.github/github_actions/issues_config.json'
           ISSUES_FOOTER_PATH:  '.github/github_actions/issues_footer.md'
           ISSUES_HEADER_PATH:  '.github/github_actions/issues_header.md'
